--- a/NanoServices-URN-and-Message-Semantics.ipynb
+++ b/NanoServices-URN-and-Message-Semantics.ipynb
@@ -295,6 +295,118 @@
     "- Worker task get: `urn:system:host.fuseki-worker#get`\n",
     "- Data system dataset: `urn:data:system`\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d966785e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Fragment semantics by scope\n",
+    "\n",
+    "The optional fragment `#<anchor>` **does not only mean \"operation\"**.  \n",
+    "It is a generic **sub-address anchor** whose **default meaning depends on the scope**:\n",
+    "\n",
+    "### `scope=system`\n",
+    "- **Default anchor meaning:** a **task/operation** provided by the addressed resource.\n",
+    "- Example: `urn:system:host.fuseki-worker#get`  → call task `get` on resource `host.fuseki-worker`.\n",
+    "\n",
+    "### `scope=data`\n",
+    "- **Default anchor meaning:** a **resource/entity inside the named graph** (dataset).\n",
+    "- Example: `urn:data:system#self-description`  → the entity `self-description` inside the graph `system`.\n",
+    "- Without a fragment, the URN refers to the **graph/dataset as a whole**: `urn:data:system`.\n",
+    "\n",
+    "> Optional extension (only if you need it): you **may** use typed anchors like `#task:get` or `#res:customer-123` to avoid ambiguity in mixed cases. The **default** remains untyped anchors with a scope-specific default meaning as defined above.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ebd457",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Mapping external IRIs to safe anchors (recommended)\n",
+    "\n",
+    "Inside `scope=data`, an entity may already have a full IRI in RDF. To keep URNs canonical and ASCII-safe,\n",
+    "we recommend deriving a **deterministic, collision-resistant anchor** using a slug + short hash:\n",
+    "\n",
+    "- Take the IRI's last path or fragment segment, normalize it to `[a-z0-9.-]+` (same rules as names).\n",
+    "- Append a short hex of the full IRI (e.g., first 8 chars of SHA-1) to avoid collisions.\n",
+    "\n",
+    "Example mapping:\n",
+    "- `http://example.org/res/Patient#42` → `patient-42-3f2a9c1b`\n",
+    "- `https://example.com/items/ABC-123` → `abc-123-7d81e0af`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d6b27fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import hashlib\n",
+    "\n",
+    "def short_hex(s, n=8):\n",
+    "    return hashlib.sha1(s.encode(\"utf-8\")).hexdigest()[:n]\n",
+    "\n",
+    "def anchor_for_iri(iri, maxlen=64):\n",
+    "    \\\"\\\"\\\"Create a safe anchor for an arbitrary IRI:\n",
+    "    - slugify the last segment (path or fragment) via normalize_name\n",
+    "    - append '-' + short hex to guard against collisions\n",
+    "    \\\"\\\"\\\"\n",
+    "    # split by '#' then '/', pick the last non-empty token\n",
+    "    last = iri\n",
+    "    if \"#\" in last:\n",
+    "        last = last.split(\"#\")[-1] or last\n",
+    "    if \"/\" in last:\n",
+    "        tmp = last.split(\"/\")\n",
+    "        last = tmp[-1] or (tmp[-2] if len(tmp) > 1 else \"\")\n",
+    "    slug = normalize_name(last) if last else \"res\"\n",
+    "    hx = short_hex(iri, 8)\n",
+    "    base = f\\\"{slug}-{hx}\\\"\n",
+    "    # enforce allowed charset through normalize_name again (safe-guard)\n",
+    "    return normalize_name(base)[:maxlen]\n",
+    "\n",
+    "def compose_data_entity_urn(graph_name, entity_iri):\n",
+    "    \\\"\\\"\\\"Compose a data-scope URN for an entity inside a named graph.\n",
+    "    Example:\n",
+    "      compose_data_entity_urn(\\\"system\\\", \\\"http://example.org/res/Patient#42\\\")\n",
+    "      -> 'urn:data:system#patient-42-3f2a9c1b'\n",
+    "    \\\"\\\"\\\"\n",
+    "    graph_urn = compose_urn(\\\"data\\\", graph_name)\n",
+    "    return f\\\"{graph_urn}#{anchor_for_iri(entity_iri)}\\\"\n",
+    "\n",
+    "# Demo\n",
+    "print(compose_data_entity_urn(\\\"system\\\", \\\"http://example.org/res/Patient#42\\\"))\n",
+    "print(compose_data_entity_urn(\\\"patient-db\\\", \\\"https://example.com/items/ABC-123\\\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9033fa7c",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Additional examples\n",
+    "\n",
+    "- Graph as a whole:  \n",
+    "  `urn:data:system`\n",
+    "\n",
+    "- Entity inside a graph (handwritten anchor):  \n",
+    "  `urn:data:system#self-description`\n",
+    "\n",
+    "- Entity inside a graph (derived from external IRI):  \n",
+    "  `urn:data:patient-db#patient-42-3f2a9c1b`\n",
+    "\n",
+    "- System scope with operation:  \n",
+    "  `urn:system:host.fuseki-worker#get`\n",
+    "\n",
+    "- (Optional) Typed anchors (only if needed):  \n",
+    "  `urn:system:host.worker#task:register`  \n",
+    "  `urn:data:catalog#res:product-7d81e0af`\n"
+   ]
   }
  ],
  "metadata": {
